support annotations in ServerGroupInUpstream
